JFR: Can't handle constant dynamic used by Jacoco agent

XMLWordPrintable

    • jfr
    • b27
    • x86
    • os_x_10.15
    • Verified

        The issue seems to be related to issue JDK-8232997 which should be fixed on JDK-14. But this one can be still reproduced on JDK-14.

        {code}
        Current thread (0x00007fd574009000): JavaThread "main" [_thread_in_vm, id=6147, stack(0x000070000cc16000,0x000070000cd16000)]

        Stack: [0x000070000cc16000,0x000070000cd16000], sp=0x000070000cd13180, free space=1012k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        C [libsystem_platform.dylib+0xaf0] _platform_memmove$VARIANT$Haswell+0x1f0
        V [libjvm.dylib+0x3608f0] JfrEventClassTransformer::on_klass_creation(InstanceKlass*&, ClassFileParser&, Thread*)+0xdac
        V [libjvm.dylib+0x4cb343] KlassFactory::create_from_stream(ClassFileStream*, Symbol*, ClassLoaderData*, Handle, InstanceKlass const*, GrowableArray<Handle>*, Thread*)+0x1a9
        V [libjvm.dylib+0x6b79bc] SystemDictionary::resolve_from_stream(Symbol*, Handle, Handle, ClassFileStream*, Thread*)+0x112
        V [libjvm.dylib+0x3c61c8] jvm_define_class_common(JNIEnv_*, char const*, _jobject*, signed char const*, int, _jobject*, char const*, Thread*)+0x25a
        V [libjvm.dylib+0x3c630b] JVM_DefineClassWithSource+0xc1
        C [libjava.dylib+0x1814] Java_java_lang_ClassLoader_defineClass1+0x164
        j java.lang.ClassLoader.defineClass1(Ljava/lang/ClassLoader;Ljava/lang/String;[BIILjava/security/ProtectionDomain;Ljava/lang/String;)Ljava/lang/Class;+0 java.base@14.0.1
        j java.lang.ClassLoader.defineClass(Ljava/lang/String;[BIILjava/security/ProtectionDomain;)Ljava/lang/Class;+27 java.base@14.0.1
        {code}

          1. hs_err_pid90972.log
            92 kB
            Tomáš Zezula
          2. testproject.tgz
            19 kB
            Tomáš Zezula

              Assignee:
              Erik Gahlin
              Reporter:
              Tomáš Zezula
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: