8245283: JFR: Can't handle constant dynamic used by Jacoco agent

Reviewed-by: mgronlun